버튼 수정 삭제 버튼 색깔

--- a/team_stage/storyCard5.html
+++ b/team_stage/storyCard5.html
@@ -92,7 +92,7 @@
 					const passwordControlsHTML = `
 				<div class="password-controls">
 					<input type="password" class="form-control password-input" placeholder="Password">
-					<button type="button" class="btn btn-outline-primary double-check-btn" >비밀번호 확인</button>
+					<button type="button" class="btn double-check-btn" >비밀번호 확인</button>
 				</div>`;
 					cardBody.append(passwordControlsHTML);
 				} else {
@@ -139,12 +139,12 @@
 				const editForm = `
 				<div class="edit-form">
 					<input type="password" class="form-control edit-password" placeholder="Password">
-					<button type="button" class="btn btn-outline-primary double-check-btn">비밀번호 확인</button>
+					<button type="button" class="btn double-check-btn">비밀번호 확인</button>
 					<div class="edit-container" style="display: none;">
 						<input type="text" class="form-control edit-title" value="${title}">
 						<textarea class="form-control edit-comment">${comment}</textarea>
-						<button type="button" class="btn btn-outline-success apply-btn">적용</button>
-						<button type="button" class="btn btn-outline-secondary cancel-btn">취소</button>
+						<button type="button" class="btn apply-btn">적용</button>
+						<button type="button" class="btn cancel-btn">취소</button>
 					</div>
 				</div>`;
 
