--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -211,7 +211,7 @@
 		<a href="index.html" id="back">X</a>
 		<div class="cardMain">
 			<div>
-				<img id="photo" class="cardImages" src="https://firebasestorage.googleapis.com/v0/b/our-stage.appspot.com/o/%EC%A0%95%ED%95%B4%EC%A4%80%EC%82%AC%EC%A7%84.jpg?alt=media&token=ae8df09d-ac25-4f92-9d74-c30dd35775c3" alt="정해준 사진" />
+				<img class="cardImages">
 			</div>
 			<div class="cardStory">
 				<h1>정해준</h1>
